Test DOM Manipulation -- Create different objects for similar types of HTML elements when needed.

--- a/index.html
+++ b/index.html
@@ -5,28 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to JS</title>
+    <script src="script.js" defer></script>
 </head>
-<body>
-    <script>
-        function add7(num) {
-            return (num+7);
-        }
-        console.log(add7(2));
-
-        function multiply(num1, num2) {
-            return num1*num2;
-        }
-        console.log(multiply(3,4));
-        
-        function capitalize(input) {
-            return input.substring(0,1).toUpperCase() + input.substring(1);
-        }
-        console.log(capitalize("asdlkfjasdfl;ajsdf"));
-
-        function lastLetter(input) {
-            return input.substring(input.length - 1);
-        }
-        console.log(lastLetter("testing"));
-    </script>
+<body> 
 </body>
 </html>
